Rough initial sketch

--- a/NeatFunctions.uplugin
+++ b/NeatFunctions.uplugin
@@ -18,6 +18,11 @@
 			"Name": "NeatFunctions",
 			"Type": "UncookedOnly",
 			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "NeatFunctionsRuntime",
+			"Type": "Runtime",
+			"LoadingPhase": "Default"
 		}
 	]
 }
